[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/player2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/player1.png" type="Texture" id=2]
[ext_resource path="res://Script/player.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="player" type="Area2D" groups=[
"player",
]]
position = Vector2( 58, 98 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="hit_zone" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="reload_timer" type="Timer" parent="." groups=[
"player",
]]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_player_area_entered"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
